sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:7: error: not found: value b
		   b  echange(j-1,j);
                   ^